[package]
name = "kiln-cli"
version = "0.2.1-beta"
description = "Command-line interface for KILN industrial operations"
edition = "2021"

[[bin]]
name = "kiln"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
solana-sdk = "=1.17.0"
solana-client = "=1.17.0"
anchor-client = "0.29.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
